<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".SecondActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_width"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarSecond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/Blue"
                app:subtitleTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:subtitleTextColor="@color/white"
                app:titleTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:titleTextColor="@color/white"
                tools:ignore="MissingConstraints"></androidx.appcompat.widget.Toolbar>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/paddingCircleImageView"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/photoCircleImageViewSecondCIV"
                android:layout_width="@dimen/circleImageViewRadiusMainActivity"
                android:layout_height="@dimen/circleImageViewRadiusMainActivity"
                android:scaleType="centerCrop"
                android:src="@drawable/empty_photo"></de.hdodenhof.circleimageview.CircleImageView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameAndSurnameTextVieWSecondTW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:hint="@string/nameAndSurnameTextVieWSecondTW_Hint"
                android:textColor="@color/black"
                android:textSize="@dimen/textSiZeMainTV_Name_Surname"></TextView>
            <TextView
                android:id="@+id/birthdayTextVieWSecondTW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/birthdayTextVieWSecondTW_Hint"
                android:textColor="@color/black"
                android:textSize="@dimen/textSiZeMainYearOfBirthEditText"></TextView>

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/daysBeforeTheBirthdayTextVieWSecondTW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:hint="@string/daysBeforeTheBirthdayTextVieWSecondTW_Hint"
            android:textColor="@color/Blue"
            android:textSize="@dimen/textSiZeMainTV_Name_Surname"></TextView>

    </LinearLayout>

    </LinearLayout>

</ScrollView>